deployment/cli-src/cloudformation-server.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Cluster, containers, and databases for the hackathon AI game
Parameters:
  InfrastructureStackName:
    Type: String
    Description: The name of the parent Fargate networking stack that was created.
      Necessary to locate and reference resources created by that stack.
  ServerServiceName:
    Type: String
    Default: hackathon-server
    Description: A name for ECS the service running the Hackathon server.
  ServerHTTPPort:
    Type: Number
    Default: 8080
    Description: What port number the hackathon server apllication is binding to.
      Externally, this stack will always map it to port 80.
  ServerContainerCpu:
    Type: Number
    Default: 4096
    Description: How much CPU to give the server container. 1024 is 1 CPU
  ServerContainerMemory:
    Type: Number
    Default: 8192
    Description: How much memory in megabytes to give the server container
  DBName:
    Type: String
    Default: hackathon
    Description: The name of the database to create and link to
  DBUser:
    Type: String
    Default: hackathon
    Description: The username to run the database as
    MinLength: 1
    MaxLength: 128
  DBPassword:
    Type: String
    Description: The password for the database user
    NoEcho: true
    MinLength: 8
    MaxLength: 128
  ServerImage:
    Type: String
    Description: The fully-qualified name of the server Docker image to use
  owner:
    Type: String
    Description: The owner of the resources being created
  Project:
    Type: String
    Description: The name of the current iteration of the hackathon project
  Client:
    Type: String
    Description: The business owner of the resources
    Default: 'Scott Logic'

Resources:

  # ECS Resources
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'                          
      ClusterName:
        Ref: 'AWS::StackName'

  # The task definition. This is a simple metadata description of what
  # container to run, and what resource requirements it has.
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      Family:
        Ref: 'ServerServiceName'
      Cpu:
        Ref: 'ServerContainerCpu'
      Memory:
        Ref: 'ServerContainerMemory'
      NetworkMode: awsvpc
      RequiresCompatibilities:
      - FARGATE
      ExecutionRoleArn:
        Fn::ImportValue:
          Fn::Join:
            - ':'
            -
              - Ref: 'InfrastructureStackName'
              - 'ECSTaskExecutionRole'
      ContainerDefinitions:
      - Name:
          Ref: 'ServerServiceName'
        Cpu:
          Ref: 'ServerContainerCpu'
        Memory:
          Ref: 'ServerContainerMemory'
        Image:
          Ref: 'ServerImage'
        PortMappings:
        - ContainerPort:
            Ref: 'ServerHTTPPort'
        Environment:
          - Name: DB_NAME
            Value:
              Ref: 'DBName'
          - Name: DB_TYPE
            Value: postgres
          - Name: DB_HOST
            Value:
              Fn::GetAtt: Database.Endpoint.Address
          - Name: DB_PORT
            Value:
              Fn::GetAtt: Database.Endpoint.Port
          - Name: DB_USER
            Value:
              Ref: 'DBUser'
          - Name: DB_PASSWORD
            Value:
              Ref: 'DBPassword'
        LogConfiguration:
          LogDriver: awslogs
          Options:
            awslogs-group:
              Fn::ImportValue:
                Fn::Join:
                  - ':'
                  -
                    - Ref: 'InfrastructureStackName'
                    - 'LogGroup'
            awslogs-region:
              Ref: 'AWS::Region'
            awslogs-stream-prefix:
              Ref: 'ServerServiceName'

  # The service. The service is a resource which allows you to run multiple
  # copies of a type of task, and gather up their logs and metrics, as well
  # as monitor the number of running tasks and replace any that have crashed
  Service:
    Type: AWS::ECS::Service
    DependsOn:
    - LoadBalancerRule
    - Database
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      ServiceName:
        Ref: 'ServerServiceName'
      Cluster:
        Ref: 'ECSCluster'
      LaunchType: FARGATE
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DesiredCount: 1
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
          - Fn::ImportValue:
              Fn::Join:
                - ':'
                -
                  - Ref: 'InfrastructureStackName'
                  - 'FargateContainerSecurityGroup'
          Subnets:
          - Fn::ImportValue:
              Fn::Join:
                - ':'
                -
                  - Ref: 'InfrastructureStackName'
                  - 'PrivateSubnetOne'
          - Fn::ImportValue:
              Fn::Join:
                - ':'
                -
                  - Ref: 'InfrastructureStackName'
                  - 'PrivateSubnetTwo'
      TaskDefinition:
        Ref: 'TaskDefinition'
      LoadBalancers:
      - ContainerName:
          Ref: 'ServerServiceName'
        ContainerPort:
          Ref: 'ServerHTTPPort'
        TargetGroupArn:
          Ref: 'TargetGroup'

  # A target group. This is used for keeping track of all the tasks, and
  # what IP addresses / port numbers they have. You can query it yourself,
  # to use the addresses yourself, but most often this target group is just
  # connected to an application load balancer, or network load balancer, so
  # it can automatically distribute traffic across all the targets.
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      HealthCheckIntervalSeconds: 6
      HealthCheckPath: "/admin/healthcheck"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      TargetType: ip
      Name:
        Ref: 'ServerServiceName'
      Port:
        Ref: 'ServerHTTPPort'
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId:
        Fn::ImportValue:
          Fn::Join:
            - ':'
            -
              - Ref: 'InfrastructureStackName'
              - 'VPCId'

  # Create a rule on the load balancer for routing traffic to the target group
  LoadBalancerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:        
      Actions:
      - TargetGroupArn:
          Ref: 'TargetGroup'
        Type: 'forward'
      Conditions:
      - Field: path-pattern
        Values: ["/application*"]
      ListenerArn:
        Fn::ImportValue:
          Fn::Join:
            - ':'
            -
              - Ref: 'InfrastructureStackName'
              - 'PublicListener'
      Priority: 1

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      DBSubnetGroupDescription: VPC subnets for the database
      SubnetIds:
        - Fn::ImportValue:
            Fn::Join:
              - ':'
              -
                - Ref: 'InfrastructureStackName'
                - 'PrivateSubnetOne'
        - Fn::ImportValue:
            Fn::Join:
              - ':'
              -
                - Ref: 'InfrastructureStackName'
                - 'PrivateSubnetTwo'

  Database:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      Engine: postgres
      DBInstanceClass: db.t3.micro
      AllocatedStorage: 5
      AutoMinorVersionUpgrade: true
      DBName:
        Ref: 'DBName'
      MasterUsername:
        Ref: 'DBUser'
      MasterUserPassword:
        Ref: 'DBPassword'
      DBSubnetGroupName:
        Ref: 'DBSubnetGroup'
      VPCSecurityGroups:
        - Fn::ImportValue:
            Fn::Join:
              - ':'
              -
                - Ref: 'InfrastructureStackName'
                - 'FargateContainerSecurityGroup'

  HackathonContestantSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      GroupDescription: 'Security group for the hackathon contestant instances'
      GroupName: 'HackathonContestantSecurityGroup'
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 8081
        ToPort: 8081
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0
      VpcId:
         Fn::ImportValue:
            Fn::Join:
              - ':'
              -
                - Ref: 'InfrastructureStackName'
                - 'VPCId'

  ECRReadOnlyRole:
    Type: AWS::IAM::Role
    Properties:
      Tags:
        - Key: owner
          Value:
              Ref: 'owner'
        - Key: Project
          Value:
              Ref: 'Project'
        - Key: Client
          Value:
              Ref: 'Client'        
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          -
            Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      Policies:
        - PolicyName: ECRReadOnly
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: "ECRReadOnly"
                Effect: "Allow"
                Action:
                  - "ecr:GetLifecyclePolicyPreview"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:BatchGetImage"
                  - "ecr:DescribeImages"
                  - "ecr:GetAuthorizationToken"
                  - "ecr:DescribeRepositories"
                  - "ecr:ListTagsForResource"
                  - "ecr:ListImages"
                  - "ecr:BatchCheckLayerAvailability"
                  - "ecr:GetRepositoryPolicy"
                  - "ecr:GetLifecyclePolicy"
                Resource: "*"
      RoleName: "ECRReadOnlyRole"

  ContestantInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:      
      InstanceProfileName: 'ContestantInstanceProfile'
      Roles:
        - Ref: ECRReadOnlyRole
